--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@ffmpeg/core": "^0.12.6",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@metamask/providers": "^18.1.1",
+    "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.6",
+    "@react-three/drei": "^9.116.3",
+    "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,14 +21,27 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "dat.gui": "^0.7.9",
+    "dompurify": "^3.2.0",
+    "echarts": "^5.5.1",
+    "ethers": "^5.7.2",
+    "glslify": "^7.1.1",
+    "metamask": "^0.0.1-security",
+    "pinata-web3": "^0.5.2",
     "react": "^18.3.1",
     "react-animated-waves": "^1.0.2",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-wavify": "^1.11.1",
+    "simplex-noise": "^3.0.1",
     "socket.io-client": "^4.8.1",
+    "three": "^0.170.0",
+    "three-orbit-controls": "^82.1.0",
+    "three-orbitcontrols": "^2.110.2",
     "typescript": "^4.9.5",
+    "wavesurfer.js": "^7.8.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +70,9 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/dat.gui": "^0.7.13",
+    "@types/three": "^0.170.0",
+    "@types/wavesurfer.js": "^6.0.12",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14"
