fix: error handling in transaction

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Echo Shield",
+  "name": "Created by Echo Shield team members",
   "icons": [
     {
       "src": "favicon.ico",
