--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-wavify": "^1.11.1",
     "simplex-noise": "^3.0.1",
     "socket.io-client": "^4.8.1",
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -69,9 +69,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@types/axios": "^0.9.36",
     "@types/dat.gui": "^0.7.13",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@types/three": "^0.170.0",
     "@types/wavesurfer.js": "^6.0.12",
     "autoprefixer": "^10.4.20",
